Fix Rating Wrap

--- a/src/styles/logement.sass
+++ b/src/styles/logement.sass
@@ -31,6 +31,9 @@
     .rating
         padding-top: 21px
 
+    aside
+        min-width: 180px
+
 @media screen and (max-width: $mobile-breakpoint)
     .logement
         .info, .more-info
